:sparkles: add user update rpc
